# html-escape

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
benches/: bench.rs  encode.rs
benches/data/: vgilante.txt
src/: functions.rs  lib.rs
src/decode/: mod.rs  named_entities.rs
src/decode/element/: decode_impl.rs  script.rs  style.rs
src/decode/html_entity/: mod.rs
src/encode/: escape_impl.rs  html_entity.rs  javascript.rs  mod.rs  unquoted_attribute.rs
src/encode/element/: encode_impl.rs  script.rs  style.rs
src/encode/html_entity/: mod.rs  unquoted_attribute.rs
tests/: decode.rs  element.rs  encode.rs  html_entity.rs
